fix parametrized test